--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,8 +41,9 @@ android {
         applicationId "com.MrHYDRA.hello"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 1
+        
+        versionName "1.0"
     }
 
     buildTypes {
